# ayu

./: .gitignore  README.md  ayu.lprof  pyproject.toml  setup.py  test.tsv
OM-RGC/: ayu.13460.preproc_rejected.txt  ayu.13460.status.ayu  ayu.13498.preproc_rejected.txt  ayu.13579.alias__0.pQSO.tsv  ayu.13579.alias__0.prot_costs.tsv  ayu.13579.preproc_rejected.txt  ayu.15893.alias__0.pQSO.tsv  ayu.15893.alias__0.prot_costs.tsv  ayu.15893.preproc_rejected.txt  ayu.21033.status.ayu  ayu.21110.alias__0.pPAAC.tsv  ayu.21110.alias__0.prot_costs.tsv  ayu.21110.preproc_rejected.txt  ayu.39844.alias__0.pPAAC.tsv  ayu.39844.alias__0.prot_costs.tsv  ayu.39844.preproc_rejected.txt  ayu.39844.status.ayu
OM-RGC_2/: ayu.44873.preproc_rejected.txt  ayu.44873.status.ayu
OM-RGC_3/: ayu.45132.alias__0.pPAAC.tsv  ayu.45132.preproc_rejected.txt  ayu.45132.status.ayu
ayu/: ex_programs_processing.py  ilr_conversion.py  prediction.py  preprocessing.py  protein_features.py
ayu.egg-info/: PKG-INFO  SOURCES.txt
ayu/data/: build_json_file.py
ayu/models/: xgb_cyto.json  xgb_cyto.pkl  xgb_extr.json  xgb_extr.pkl  xgb_peri.json  xgb_peri.pkl
data/: build_json_file.py  protein_scales.json
eval_train_sets/: ml_eval_set.tsv
